solr 7.4